--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,5 +72,5 @@ jobs:
       - run: go mod download
       - env:
           TF_ACC: "1"
-        run: go test -v -cover ./internal/provider/
+        run: go test -v -cover ./internal/tharsis/
         timeout-minutes: 10
