Comment out setting TF_ACC, because any value causes the workflow to run the acceptance tests.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,6 +72,6 @@ jobs:
           terraform_wrapper: false
       - run: go mod download
       - env:
-          TF_ACC: "0"
+          # TF_ACC: "1"
         run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
