--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,5 +73,6 @@ jobs:
       - run: go mod download
       # - env:
       #     TF_ACC: "1"
-        run: go test -v -cover ./internal/provider/
+      #  run: go test -v -cover ./internal/provider/
+      - run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
