--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,8 @@ jobs:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
       - run: go mod download
-      - env:
-          # TF_ACC: "1"
-        run: go test -v -cover ./internal/provider/
+      # - env:
+      #     TF_ACC: "1"
+      #  run: go test -v -cover ./internal/provider/
+      - run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
