--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,8 +41,8 @@
         "files.insertFinalNewline": true,
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true,
-            "source.fixAll": true
+            "source.organizeImports": "explicit",
+            "source.fixAll": "explicit"
         }
     },
     "[typescript]": {
