Generate SBOM for each binary

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,10 +32,15 @@ archives:
   name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
 sboms:
 - documents:
-  - bom.json
-  artifacts: any
+  - "gl-sbom-go-go.{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}.bom.json"
+  artifacts: binary
   cmd: cyclonedx-gomod
   args: [ "mod", "-assert-licenses", "-std", "-json", "-verbose", "-output", "$document", "../" ]
+  env:
+  - GOARCH={{ .Arch }}
+  - GOOS={{ .Os }}
+  - GOFLAGS=-mod=vendor
+  - CGO_ENABLED=0
 checksum:
   extra_files:
     - glob: 'terraform-registry-manifest.json'
