--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -64,4 +64,4 @@ release:
     - glob: 'terraform-registry-manifest.json'
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
 changelog:
-  skip: true
+  disable: true
