--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,6 +27,12 @@ builds:
     - goos: darwin
       goarch: '386'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
+sboms:
+- documents:
+  - "gl-sbom-go-go.{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}.cdx.json"
+  artifacts: binary
+  cmd: cyclonedx-gomod
+  args: [ "bin",  "-assert-licenses", "-licenses", "-std", "-json", "-verbose", "-output", "$document", "../" ]
 archives:
 - format: zip
   name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
