--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,8 @@ jobs:
           - "amd64"
           - "arm64"
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: "Install CycloneDX"
         uses: CycloneDX/gh-gomod-generate-sbom@v2
         with:
@@ -54,6 +56,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: create_sboms
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Download all SBOMs
         uses: actions/download-artifact@v4
       - run: "bash ./scripts/merge_sboms.sh"
