--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,16 +24,8 @@ jobs:
       fail-fast: false
       matrix:
         # The platforms we'll be generating SBOMs for.
-        os:
-          - "freebsd"
-          - "linux"
-          - "windows"
-          - "linux"
-        arch:
-          - "386"
-          - "arm"
-          - "amd64"
-          - "arm64"
+        os: [freebsd, windows, linux, darwin]
+        arch: ["386", arm64, amd64, arm]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -50,7 +42,7 @@ jobs:
         shell: bash
       - uses: actions/upload-artifact@master
         with:
-          path: gl-sbom-go-go.*cdx.json
+          path: gl-sbom-go-*.cdx.json
   merge_sboms:
     name: Merge SBOMs
     runs-on: ubuntu-latest
