Add artifact name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
         shell: bash
       - uses: actions/upload-artifact@master
         with:
+          name: "gl-sbom-go-${{ matrix.os }}-${{ matrix.arch }}-0.cdx.json"
           path: gl-sbom-go-*.cdx.json
   merge_sboms:
     name: Merge SBOMs
