--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: "gl-sbom-go-${{ matrix.os }}-${{ matrix.arch }}-0.cdx.json"
-          path: "**/gl-sbom-go-*.cdx.json"
+          path: "gl-sbom-go-${{ matrix.os }}-${{ matrix.arch }}-0.cdx.json"
   merge_sboms:
     name: Merge SBOMs
     runs-on: ubuntu-latest
