--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,11 +40,9 @@ jobs:
           CGO_ENABLED: 0
         run: "bash ./scripts/create_sboms.sh"
         shell: bash
-      - name: Display structure of SBOMs
-        run: ls -R
       - uses: actions/upload-artifact@master
         with:
-          name: "gl-sbom-go-${{ matrix.os }}-${{ matrix.arch }}-0.cdx.json"
+          name: "sbom-artifact-${{ matrix.os }}-${{ matrix.arch }}"
           path: "gl-sbom-go-${{ matrix.os }}-${{ matrix.arch }}-0.cdx.json"
   merge_sboms:
     name: Merge SBOMs
@@ -55,8 +53,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Download all SBOMs
         uses: actions/download-artifact@v4
-      - name: Display structure of downloaded files
-        run: ls -R
+        with:
+          path: sboms
+          pattern: sbom-artifact-*
+          merge-multiple: true
       - run: "bash ./scripts/merge_sboms.sh"
         env:
           CGO_ENABLED: 0
@@ -64,6 +64,7 @@ jobs:
         shell: bash
       - uses: actions/upload-artifact@master
         with:
+          name: "sbom-artifact-all"
           path: gl-sbom-all.cdx.json
   goreleaser:
     runs-on: ubuntu-latest
@@ -86,6 +87,11 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
       - name: Download SBOMs
         uses: actions/download-artifact@v4
+        with:
+          path: sboms
+          pattern: sbom-artifact-*
+          merge-multiple: true
+      - run: ls -R sboms
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3.1.0
         with:
