--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: sboms
-          pattern: sbom-artifact-*
+          pattern: sbom-artifact-all
           merge-multiple: true
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3.1.0
