--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           go-version-file: "go.mod"
           cache: true
