Remove deprecated HCL field for variables (#38)
Co-authored-by: Aman Singh <aman.singh@infor.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v3
       - uses: actions/setup-go@v3
         with:
           go-version-file: "go.mod"
